Add missing add-opens.