@@ -4,6 +4,7 @@ java ^
 --add-opens java.base/java.io=ALL-UNNAMED ^
 --add-opens java.base/java.nio=ALL-UNNAMED ^
 --add-opens java.base/jdk.internal.ref=ALL-UNNAMED ^
+--add-opens java.base/jdk.internal.misc=ALL-UNNAMED ^
 --add-opens java.base/sun.nio.ch=ALL-UNNAMED ^
 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED ^
 -Xms512M ^
